// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppManagementView should disable buttons and display "Installing..." button text when installing app 1`] = `
Array [
  <div
    apps={
      Immutable.List [
        Immutable.Record {
          "name": "pc-nrfconnect-foo",
          "displayName": "Foo app",
          "description": "Foo description",
          "homepage": null,
          "currentVersion": null,
          "latestVersion": null,
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": "bar",
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
      ]
    }
    sources={Object {}}
  />,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          Foo app
        </div>
        <div
          className="small text-muted"
        >
          Foo description
        </div>
        <div
          className="small text-muted-more"
        >
          bar
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={true}
            onClick={[Function]}
            title="Install Foo app"
            type="button"
          >
            Installing...
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-secondary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`AppManagementView should disable buttons and display "Removing..." button text when removing app 1`] = `
Array [
  <div
    apps={
      Immutable.List [
        Immutable.Record {
          "name": "pc-nrfconnect-foo",
          "displayName": "Foo app",
          "description": "Foo description",
          "homepage": null,
          "currentVersion": "1.2.3",
          "latestVersion": "1.2.3",
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": "bar",
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
      ]
    }
    sources={Object {}}
  />,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
          <div>
            <span
              className="alert-icon-bg"
            />
            <span
              className="mdi mdi-alert"
              title="The app does not specify which nRF Connect version(s) it supports"
            />
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          Foo app
        </div>
        <div
          className="small text-muted"
        >
          Foo description
        </div>
        <div
          className="small text-muted-more"
        >
          bar
          , v
          1.2.3
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            title="Open Foo app"
            type="button"
          >
            Open
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`AppManagementView should disable buttons and display "Upgrading..." button text when upgrading app 1`] = `
Array [
  <div
    apps={
      Immutable.List [
        Immutable.Record {
          "name": "pc-nrfconnect-foo",
          "displayName": "Foo app",
          "description": "Foo description",
          "homepage": null,
          "currentVersion": "1.2.3",
          "latestVersion": "1.2.4",
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": "bar",
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
      ]
    }
    sources={Object {}}
  />,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
          <div>
            <span
              className="alert-icon-bg"
            />
            <span
              className="mdi mdi-alert"
              title="The app does not specify which nRF Connect version(s) it supports"
            />
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          Foo app
        </div>
        <div
          className="small text-muted"
        >
          Foo description
        </div>
        <div
          className="small text-muted-more"
        >
          bar
          , v
          1.2.3
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-primary"
            disabled={true}
            onClick={[Function]}
            title="Open Foo app"
            type="button"
          >
            Open
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`AppManagementView should render more info links for correctly defined homepage 1`] = `
Array [
  <div
    apps={
      Immutable.List [
        Immutable.Record {
          "name": "appA",
          "displayName": "App A",
          "description": "appA description",
          "homepage": "https://foo.bar/readme.md",
          "currentVersion": null,
          "latestVersion": null,
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": null,
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
        Immutable.Record {
          "name": "appB",
          "displayName": "App B",
          "description": "appB description",
          "homepage": "",
          "currentVersion": null,
          "latestVersion": null,
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": null,
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
        Immutable.Record {
          "name": "appC",
          "displayName": "App C",
          "description": "appC description",
          "homepage": null,
          "currentVersion": null,
          "latestVersion": null,
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": null,
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
      ]
    }
    sources={Object {}}
  />,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          App A
        </div>
        <div
          className="small text-muted"
        >
          appA description
        </div>
        <div
          className="small text-muted-more"
        >
          local
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App A"
            type="button"
          >
            Install
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-secondary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          App B
        </div>
        <div
          className="small text-muted"
        >
          appB description
        </div>
        <div
          className="small text-muted-more"
        >
          local
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App B"
            type="button"
          >
            Install
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-secondary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          App C
        </div>
        <div
          className="small text-muted"
        >
          appC description
        </div>
        <div
          className="small text-muted-more"
        >
          local
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App C"
            type="button"
          >
            Install
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-secondary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`AppManagementView should render not-installed, installed, and upgradable apps 1`] = `
Array [
  <div
    apps={
      Immutable.List [
        Immutable.Record {
          "name": "appB",
          "displayName": "App B",
          "description": "appB description",
          "homepage": null,
          "currentVersion": null,
          "latestVersion": null,
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": null,
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
        Immutable.Record {
          "name": "appC",
          "displayName": "App C",
          "description": "appC description",
          "homepage": null,
          "currentVersion": "1.2.3",
          "latestVersion": "1.2.3",
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": null,
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
        Immutable.Record {
          "name": "appA",
          "displayName": "App A",
          "description": "appA description",
          "homepage": null,
          "currentVersion": "1.2.3",
          "latestVersion": "1.2.4",
          "engineVersion": null,
          "path": null,
          "iconPath": null,
          "shortcutIconPath": null,
          "isOfficial": null,
          "isSupportedEngine": null,
          "source": null,
          "url": null,
          "releaseNote": null,
          "upgradeAvailable": null,
          "repositoryUrl": null,
        },
      ]
    }
    sources={Object {}}
  />,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          App B
        </div>
        <div
          className="small text-muted"
        >
          appB description
        </div>
        <div
          className="small text-muted-more"
        >
          local
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-outline-secondary"
            disabled={false}
            onClick={[Function]}
            title="Install App B"
            type="button"
          >
            Install
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-secondary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
          <div>
            <span
              className="alert-icon-bg"
            />
            <span
              className="mdi mdi-alert"
              title="The app does not specify which nRF Connect version(s) it supports"
            />
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          App C
        </div>
        <div
          className="small text-muted"
        >
          appC description
        </div>
        <div
          className="small text-muted-more"
        >
          local
          , v
          1.2.3
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title="Open App C"
            type="button"
          >
            Open
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="list-group-item"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="py-1 row no-gutters"
    >
      <div
        className="d-flex align-items-start col-auto my-2 mr-3"
      >
        <div
          className="core-app-icon "
          style={
            Object {
              "background": "#e6f8ff",
              "borderRadius": 7,
              "height": "48px",
              "width": "48px",
            }
          }
        >
          <img
            alt=""
            draggable={false}
            src=""
          />
          <div>
            <span
              className="alert-icon-bg"
            />
            <span
              className="mdi mdi-alert"
              title="The app does not specify which nRF Connect version(s) it supports"
            />
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="h8"
        >
          App A
        </div>
        <div
          className="small text-muted"
        >
          appA description
        </div>
        <div
          className="small text-muted-more"
        >
          local
          , v
          1.2.3
        </div>
      </div>
      <div
        className="d-flex align-items-center my-3 pl-3 col-auto ml-auto"
      >
        <div
          className="wide-btns btn-toolbar"
          role="toolbar"
        >
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title="Open App A"
            type="button"
          >
            Open
          </button>
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-outline-primary"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div />,
]
`;

exports[`AppManagementView should render without any apps 1`] = `
Array [
  <div
    apps={Immutable.List []}
    sources={Object {}}
  />,
  <div />,
]
`;
